k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: tasks
spec:
  type: ClusterIP
  selector:
    app: api        # kieruje ruch do podów z etykietą app=api
  ports:
    - port: 80      # port serwisu wewnątrz klastra
      targetPort: 8000  # port kontenera API
