k8s/base/network-policy-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: tasks
spec:
  # Dotyczy podów z etykietą app=postgres
  podSelector:
    matchLabels:
      app: postgres

  # Definiujemy reguły dla ruchu przychodzącego (ingress)
  policyTypes:
    - Ingress

  ingress:
    # Tylko pody z etykietą app=api mogą łączyć się z PostgreSQL
    - from:
        - podSelector:
            matchLabels:
              app: api
      ports:
        - protocol: TCP
          port: 5432
