k8s/base/network-policy-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  namespace: tasks
spec:
  # Dotyczy podów z etykietą app=redis
  podSelector:
    matchLabels:
      app: redis

  policyTypes:
    - Ingress

  ingress:
    # Zarówno api jak i worker mogą łączyć się z Redis
    - from:
        - podSelector:
            matchLabels:
              app: api
        - podSelector:
            matchLabels:
              app: worker
      ports:
        - protocol: TCP
          port: 6379
